phd_progress/_build/html/reports/intro.log
Traceback (most recent call last):
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/shrey/.conda/envs/jupyterbook/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from IPython.display import Image, display
import datetime as dt
import pandas as pd
import matplotlib.pyplot as plt
from matplotlib.patches import Patch
import numpy as np
import plotly.express as px
import plotly.figure_factory as ff

df = [dict(Task="Third Year Review", Start='2022-11-01', Finish='2022-12-01'),
      dict(Task="HPC IO tuner", Start='2022-07-10', Finish='2022-07-30'),
      dict(Task="SC deadline", Start='2022-08-1', Finish='2022-08-10'),
      dict(Task="Threads utilisation", Start='2022-07-25', Finish='2022-07-30'),
      dict(Task="Add fenicsX", Start='2022-07-25', Finish='2022-07-30'),
      dict(Task="SC deadline", Start='2022-08-1', Finish='2022-08-10'),
      dict(Task="Second Year Review", Start='2021-11-01', Finish='2021-12-01'),
      dict(Task="CIUK 21", Start='2021-10-01', Finish='2021-11-01'),
      dict(Task="First Year Review", Start='2021-1-01', Finish='2021-2-01')]

fig = ff.create_gantt(df) 
fig.update_layout(
    autosize=False,
<!--     width=1000,
    height=800, -->
    margin=dict(l=20, r=20, t=20, b=20),)

fig.layout.title = None

fig.show()
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    <!--     width=1000,[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2775185273.py, line 23)

